TS-205 Fixed bugs

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10088,6 +10088,11 @@ form [type="submit"],
         width: 660px;
     }
 }
+@media screen and (min-width:961px) {
+    .single-page-template .sub_parent_0 {
+        width: 715px;
+    }
+}
 @media screen and (min-width:820px) and (max-width:960px) {
     .single-page-template .sub_parent_0 {
         width: 660px;
@@ -10098,7 +10103,7 @@ form [type="submit"],
 }
 @media screen and (min-width:961px) and (max-width:1024px) {
     .single-page-template .sub_parent_0 {
-        width: 760px;
+        /* width: 760px; */
     }
     .services-tree .prod_container {
         width: 860px;
@@ -10106,7 +10111,7 @@ form [type="submit"],
 }
 @media screen and (min-width:1025px) and (max-width:1200px) {
     .single-page-template .sub_parent_0 {
-        width: 880px;
+        /* width: 880px; */
     }
     .services-tree .prod_container {
         width: 980px;
@@ -10114,7 +10119,7 @@ form [type="submit"],
 }
 @media screen and (min-width:1201px) and (max-width:1440px) {
     .single-page-template .sub_parent_0 {
-        width: 990px;
+        /* width: 990px; */
     }
     .services-tree .prod_container {
         width: 1090px;
@@ -10122,7 +10127,7 @@ form [type="submit"],
 }
 @media screen and (min-width:1400px) {
     .single-page-template .sub_parent_0 {
-        width: 1140px;
+        /* width: 1140px; */
     }
     .services-tree .prod_container {
         width: 1240px;
