--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12929,3 +12929,15 @@ span.wpcf7-not-valid-tip { display: none; }
 .pum {
     overflow: hidden !important;
 }
+@media screen and (max-width: 1200px) and (min-width: 481px) {
+    .pdf-page-mob .title .H3 {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 28px;
+    }
+    .pdf-page-mob .Sub2 {
+        margin-left: 10px;
+        font-size: 16px;
+        line-height: 140%;
+    }
+}
