--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9800,12 +9800,10 @@ form [type="submit"],
     display: inline-flex;
 }
 
+.services-tree .prod_container .single .desc .sub_page_title,
+.services-tree .prod_container .single .desc .sub_page_link,
 .services-tree .prod_container .single .desc .simple_link {
     margin-bottom: 12px;
-}
-.services-tree .prod_container .single .desc .sub_page_title,
-.services-tree .prod_container .single .desc .sub_page_link{
-    margin-bottom: 6px;
 }
 .services-tree .prod_container .single .desc .main{
     font-weight: 700;
@@ -9821,7 +9819,6 @@ form [type="submit"],
     font-size: 18px;
     font-family: 'Commissioner', sans-serif;
     line-height: 22.4px;
-    margin-top: 8px;
     color: var(--just-grey);
 }
 .services-tree .prod_container .single .desc .sub_page_link.sub3_level {
